--- a/第五次作业/杨馥瑞/about.html
+++ b/第五次作业/杨馥瑞/about.html
@@ -7,6 +7,7 @@
   <!-- 引入 Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -20,22 +21,22 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">首页</a>
+            <a class="nav-link" href="index.html" data-aos="fade-up" data-aos-delay="600">首页</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">关于</a>
+            <a class="nav-link" href="about.html" data-aos="fade-up" data-aos-delay="600">关于</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="serves.html">服务</a>
+            <a class="nav-link" href="serves.html" data-aos="fade-up" data-aos-delay="600">服务</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://yangfreeyyds.club">联系站主</a>
+            <a class="nav-link" href="http://yangfreeyyds.club" data-aos="fade-up" data-aos-delay="600">联系站主</a>
           </li>
         </ul>
       </div>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="搜索" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">搜索</button>
+        <button class="btn btn-outline-light" type="submit" data-aos="fade-up" data-aos-delay="600">搜索</button>
       </form>
     </div>
   </nav>
@@ -57,5 +58,9 @@
 
   <!-- 引入 Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 </html>
