--- a/第五次作业/杨馥瑞/index.html
+++ b/第五次作业/杨馥瑞/index.html
@@ -7,6 +7,17 @@
   <!-- 引入 Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+  <style>
+  
+.sidebar-title {
+  background: linear-gradient(45deg, #ff0000, #00ff00, #0000ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+  transform: rotate(37.5deg);
+}
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -20,22 +31,22 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">首页</a>
+            <a class="nav-link" href="index.html" data-aos="fade-up" data-aos-delay="600">首页</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">关于</a>
+            <a class="nav-link" href="about.html" data-aos="fade-up" data-aos-delay="600">关于</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="serves.html">服务</a>
+            <a class="nav-link" href="serves.html" data-aos="fade-up" data-aos-delay="600">服务</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="http://yangfreeyyds.club">联系站主</a>
+            <a class="nav-link" href="http://yangfreeyyds.club" data-aos="fade-up" data-aos-delay="600">联系站主</a>
           </li>
         </ul>
       </div>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="搜索" aria-label="Search">
-        <button class="btn btn-outline-light" type="submit">搜索</button>
+        <button class="btn btn-outline-light" type="submit" data-aos="fade-up" data-aos-delay="600">搜索</button>
       </form>
     </div>
   </nav>
@@ -55,22 +66,22 @@
         <div id="article-container">
           <div class="article">
             <h1 class="article-title">蔡徐坤</h1>
-            <img src="images/OIP (1).jpg" alt="图片描述">
+            <img src="images/OIP (1).jpg" alt="图片描述" data-aos="slide-right" data-aos-duration="1000">
             <p class="article-content">蔡徐坤</p>
           </div>
           <div class="article">
             <h1 class="article-title">马保国</h1>
-            <img src="images/mabaoguo.jpg" alt="图片描述">
+            <img src="images/mabaoguo.jpg" alt="图片描述" data-aos="slide-right" data-aos-duration="1000">
             <p class="article-content">马保国</p>
           </div>
           <div class="article">
             <h1 class="article-title">华晨宇</h1>
-            <img src="images/huahua.jpg" alt="图片描述">
+            <img src="images/huahua.jpg" alt="图片描述" data-aos="slide-right" data-aos-duration="1000">
             <p class="article-content">华晨宇</p>
           </div>
           <div class="article">
             <h1 class="article-title">华 强</h1>
-            <img src="images/华强.jpg" alt="图片描述">
+            <img src="images/华强.jpg" alt="图片描述" data-aos="slide-right" data-aos-duration="1000">
             <p class="article-content">华 强</p>
           </div>
         </div>
@@ -82,25 +93,25 @@
     <div class="footer-row">
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E5%8D%8E%E6%99%A8%E5%AE%87/6064097">
-          <img class="footer-image" src="images/huahua.jpg" alt="Image 1">
+          <img class="footer-image" src="images/huahua.jpg" alt="Image 1" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">想要了解花花么？</div>
         </a>
       </div>
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E5%B0%8F%E9%AC%BC/22351766">
-          <img class="footer-image" src="images/太酷了.jpg" alt="Image 2">
+          <img class="footer-image" src="images/太酷了.jpg" alt="Image 2" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">这件事真的是太酷了</div>
         </a>
       </div>
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E5%8D%8E%E5%BC%BA%E4%B9%B0%E7%93%9C/58363344?fromModule=search-result_lemma-recommend">
-          <img class="footer-image" src="images/华强.jpg" alt="Image 3">
+          <img class="footer-image" src="images/华强.jpg" alt="Image 3" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">你的瓜保熟么？</div>
         </a>
       </div>
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E9%A9%AC%E4%BF%9D%E5%9B%BD/50106525?fromModule=lemma_search-box">
-          <img class="footer-image" src="images/mabaoguo.jpg" alt="Image 4">
+          <img class="footer-image" src="images/mabaoguo.jpg" alt="Image 4" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">年轻人不讲武德！</div>
         </a>
       </div>
@@ -108,25 +119,25 @@
     <div class="footer-row">
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E8%94%A1%E5%BE%90%E5%9D%A4?fromModule=lemma_search-box">
-          <img class="footer-image" src="images/OIP (1).jpg" alt="Image 5">
+          <img class="footer-image" src="images/OIP (1).jpg" alt="Image 5" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">你干嘛！啊啊</div>
         </a>
       </div>
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E5%BC%A0%E7%A0%9A%E6%8B%99?fromtitle=capper&fromid=23605444&fromModule=lemma_search-box">
-          <img class="footer-image" src="images/说唱.png" alt="Image 6">
+          <img class="footer-image" src="images/说唱.png" alt="Image 6" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">看看我最爱的驼峰</div>
         </a>
       </div>
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E7%9C%9F%E9%A6%99/22700736?fromModule=lemma-qiyi_sense-lemma">
-          <img class="footer-image" src="images/真相.jpg" alt="Image 7">
+          <img class="footer-image" src="images/真相.jpg" alt="Image 7" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">我王境泽就是饿死！</div>
         </a>
       </div>
       <div class="footer-col">
         <a href="https://baike.baidu.com/item/%E6%8E%A5%E7%9D%80%E5%A5%8F%E4%B9%90%E6%8E%A5%E7%9D%80%E8%88%9E?fromModule=lemma_search-box">
-          <img class="footer-image" src="images/b393dd8b7d8bdcf54edfc691f3c4b68.png" alt="Image 8">
+          <img class="footer-image" src="images/b393dd8b7d8bdcf54edfc691f3c4b68.png" alt="Image 8" data-aos="fade-in" data-aos-duration="1000">
           <div class="footer-image-caption">接着奏乐接着舞！</div>
         </a>
       </div>
@@ -138,6 +149,10 @@
 
   <!-- 引入 Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="js/index.js"></script>
 </body>
 </html>
